# cairn

./: .gitignore  .woodpecker.yml  CLAUDE.md  CLAUDE_CODE_IMPLEMENTATION_GUIDE_V2.md  CONTEXT_FAIRNESS_ASSESSMENT.md  DIAGNOSTIC_INFRASTRUCTURE_ASSESSMENT.md  M1B_COMPLETION.md  MEMORY_SYSTEM_MAP.md  README.md  REPO_INTEGRATION_LEARNING_ASSESSMENT.md  REPO_UNDERSTANDING_SYSTEM.md  install.sh  pyproject.toml  reos  requirements.txt  talkingrock
.github/: CONTRIBUTING.md  copilot-instructions.md
_archive/: play_cli.py
apps/: talking-rock-bridge.xpi
benchmarks/: __main__.py  analysis.py  anthropic_provider.py  corpus.json  corpus.py  db.py  matching.py  memory_analysis.py  memory_corpus.json  memory_corpus.py  memory_matching.py  memory_runner.py  models.py  runner.py
docs/: CAIRN_SIMPLIFICATION_PLAN.md  CONVERSATION_LIFECYCLE_SPEC.md  FOUNDATION.md  M1B_ARCHITECTURE.md  TALKING_ROCK_DIALECTICAL_HEALTH_FRAMEWORK.md  WORKFLOW_EXAMPLE.md  adr-verification-backport.md  app-vision.md  atomic-operations.md  beginners-guide.md  blocks-api.md  cairn_architecture.md  classification.md  code_mode_architecture.md  mobile-pwa-plan.md  nol-strategic-advantage.md  parse-gate.md  plan-agent-bar-restructure.md  plan-copper-agent-view.md  plan-e2e-test-harness.md  plan-identity-sqlite-phase1.md  plan-knowledge-store-to-sqlite.md  plan-mbox-email-bridge.md  plan-reos-inline-terminal-response.md  plan-reos-view-phases-5-6.md  plan-tool-purge-and-benchmarks.md  reasoning.md  riva-implementation-plan.md  riva-performance-strategy.md  rlhf-learning.md  security.md  system-state-design.md  tech-roadmap.md  the-play.md  the-reduction-hypothesis.md  thermodynamic-cost-canonical-form.docx  thermodynamic-cost-canonical-form.md  ui-layout-redesign-plan.md  ui-migration-typescript.md  verification-layers.md
scripts/: README.md  analyze_verification_metrics.py  benchmark_verification.py  install-shell-integration.sh  load_synthetic_data.py  migrate_to_talkingrock.py  reos-shell-integration.sh  start-pwa.sh  test_riva_harness.py
tests/: conftest.py  demo_repo_analyzer.py  test_agent_integration.py  test_agent_policy.py  test_agent_routing_e2e.py  test_anti_nag_protocol.py  test_api_smoke.py  test_archive_service.py  test_atomic_ops_executor.py  test_attention_priorities.py  test_auth.py  test_behavior_modes.py  test_blocks_db.py  test_blocks_rpc.py  test_blocks_tree.py  test_cairn.py  test_cairn_integration_format_health_report.py  test_cc_manager.py  test_cc_rpc.py  test_clarification_roundtrip.py  test_code_contract.py  test_code_executor.py  test_code_intent.py  test_code_planner.py  test_code_router.py  test_code_sandbox.py  test_codebase_index.py  test_coherence.py  test_complexity_integration.py  test_compounding_loop.py  test_compression_pipeline.py  test_context_budget.py  test_db.py  (+106 more)
(+501 files in other folders)
