[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "0.0.0a0"
description = "Cairn by Talking Rock — personal attention minder"
authors = [{ name = "Talking Rock" }]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<0.32.0",
  "pydantic>=2.8.0,<3.0.0",
  # Authentication & Encryption
  "python-pam>=2.0.0,<3.0.0",       # PAM authentication
  "cryptography>=42.0.0,<44.0.0",   # AES-256-GCM encryption, Argon2
  # LLM Providers
  "keyring>=24.0.0,<26.0.0",        # System keyring for API keys
  "secretstorage>=3.3.0,<4.0.0",    # Linux D-Bus SecretService backend
  # Resilience
  "tenacity>=8.2.0,<10.0.0",        # Retry with exponential backoff
  # Markdown parsing for block editor
  "mistletoe>=1.3.0,<2.0.0",        # Markdown -> AST parser
  # Calendar recurrence computation
  "python-dateutil>=2.8.0,<3.0.0", # RRULE parsing for recurring events
  # PWA static file serving
  "aiofiles>=23.0.0,<25.0.0",      # Async file ops for FastAPI StaticFiles
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0,<0.8.0",
  "mypy>=1.11.0,<1.13.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-cov>=4.1.0,<6.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
]
semantic = [
  "sentence-transformers>=3.0.0,<6.0.0",  # Vector embeddings for semantic search
]
documents = [
  "pypdf>=4.0.0,<5.0.0",                   # PDF text extraction
  "python-docx>=1.1.0,<2.0.0",             # DOCX text extraction
  "openpyxl>=3.1.0,<4.0.0",                # Excel text extraction
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cairn --cov-report=term-missing -m 'not slow'"
markers = [
    "slow: marks tests that call Ollama for real LLM inference (run with '-m slow' or '--run-slow')",
]

[tool.coverage.run]
source = ["src/cairn"]
branch = true
omit = [
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_equality = true
mypy_path = ["src"]

[tool.mypy-uvicorn]
ignore_missing_imports = true

[tool.mypy-fastapi]
ignore_missing_imports = true

[project.scripts]
cairn = "cairn.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
